<resources>
    <string name="app_name">GadgetGalore</string>
    <string name="slogan">Slogan asdasdasdasdasdasda</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="shop">Shop</string>
    <string name="location">Location</string>
    <string name="my_profile">My Profile</string>
    <string name="cart">Cart</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="contact">contact</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
