<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:id="@+id/myprofile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_face_black_24dp">




    </item>
    <item

    android:id="@+id/shop"
    android:title="@string/shop"
    android:icon="@drawable/ic_shop_black_24dp">




    </item>

    <item

    android:id="@+id/location"
    android:title="@string/location"
    android:icon="@drawable/ic_location_on_black_24dp">




    </item>
    <item

    android:id="@+id/cart"
    android:title="@string/cart"
    android:icon="@drawable/ic_shopping_cart_black_24dp">




    </item>

    <item

        android:id="@+id/contact"
        android:title="@string/contact"
        android:icon="@drawable/ic_email_black_24dp">




    </item>

</menu>